--- a/style.css
+++ b/style.css
@@ -34,10 +34,7 @@ background-image:-webkit-linear-gradient(  rgb(255, 255, 255), rgba(227, 206, 25
 margin-bottom: 20px;
 
 }
-#contact iframe{
- margin-bottom: 20px;
- margin-top: 20px;
-}
+
 
 .contact1 a{
     color: rgb(1, 80, 31);
@@ -53,11 +50,14 @@ margin-bottom: 20px;
     height: 100px;
     margin-top: 75px;
     margin-bottom: 5px;
-    box-shadow: 5px 5px 18px rgb(152, 240, 240);
+    box-shadow: 5px 5px 18px rgb(152, 240, 178);
 }
 #mycarousel img{
     height: 400px;
-
+    margin-top: 40px;
+    border: black;
+    border-width: 2px;
+    border-style: solid;
 }
 #mycarousel{
     margin-bottom: 100px;;
@@ -74,12 +74,5 @@ margin-bottom: 20px;
     display: inline-block;
     font-family: 'Dancing Script', cursive;
     margin-top: -85px;
-}
-
-#address p{
-    font-family: 'fantasy', cursive;
-    font-size: 25px;
-}
-#address{
-    margin-top:70px;
+    text-shadow:2px 2px 15px rgb(156, 236, 160);
 }
